--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@pinia/nuxt": "^0.11.2",
     "@unhead/vue": "^2.0.19",
+    "bcryptjs": "^3.0.2",
     "eslint": "^9.38.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.20.0",
+    "mongoose": "^8.19.2",
     "nuxt": "^4.2.0",
     "pinia": "^3.0.3",
     "typescript": "^5.9.3",
@@ -26,6 +30,7 @@
   },
   "devDependencies": {
     "@nuxt/test-utils": "^3.20.1",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.9.1",
     "autoprefixer": "^10.4.21",
     "tailwindcss": "^4.1.16",
