--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.2",
+    "nodemailer": "^7.0.10",
     "nuxt": "^4.2.0",
     "pinia": "^3.0.3",
     "typescript": "^5.9.3",
@@ -32,6 +33,7 @@
     "@nuxt/test-utils": "^3.20.1",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.9.1",
+    "@types/nodemailer": "^7.0.3",
     "autoprefixer": "^10.4.21",
     "tailwindcss": "^4.1.16",
     "vite-tsconfig-paths": "^5.1.4"
